--- a/styles.less
+++ b/styles.less
@@ -22,7 +22,7 @@ a {
   text-decoration:none;
 }
 
-/* -------------------------------------------------------------- header -------------------------------------------------------------------*/
+/* -- header -------------------------------------------------------------------*/
 
 header, footer {
   width: @commonWidth;
@@ -68,7 +68,7 @@ header, footer {
     color: white;
   }
 }
-/* -------------------------------------------------------------- main -------------------------------------------------------------------*/
+/* -- main -------------------------------------------------------------------*/
 .main {
   min-height: 500px;
 
@@ -144,7 +144,7 @@ footer {
   }
 }
 
-/* -------------------------------------------------------------- shop -------------------------------------------------------------------*/
+/* -- shop -------------------------------------------------------------------*/
 .menu_shop {
   list-style-type: none;
   float: left;
@@ -211,12 +211,12 @@ footer {
   background-color: @colorGray;
 }
 
-/* ---------------------------------------------------------- Extra large > 1200px -------------------------------------------------------------- */
+/* -- Extra large > 1200px -------------------------------------------------------------- */
 @media ( min-width: 1200px ) {
 
 }
 
-/* ---------------------------------------------------------- Large > 992px -------------------------------------------------------------- */
+/* -- Large > 992px -------------------------------------------------------------- */
 @media ( min-width: 992px ) {
   .menu_1 {
     float: left;
@@ -309,24 +309,24 @@ footer {
   .dropdown-divider {display: none}
 }
 
-/* ---------------------------------------------------------- Large < 992px -------------------------------------------------------------- */
+/* -- Large < 992px -------------------------------------------------------------- */
 @media ( max-width: 992px ) {
   .contacts img {
     display: none;
   }
 }
 
-/* ---------------------------------------------------------- Medium > 768px -------------------------------------------------------------- */
+/* -- Medium > 768px -------------------------------------------------------------- */
 @media ( min-width: 768px ) {
 
 }
 
-/* ---------------------------------------------------------- Medium < 768px -------------------------------------------------------------- */
+/* -- Medium < 768px -------------------------------------------------------------- */
 @media ( max-width: 768px ) {
 
 }
 
-/* ---------------------------------------------------------- Small > 576px -------------------------------------------------------------- */
+/* -- Small > 576px -------------------------------------------------------------- */
 @media ( min-width: 576px ) {
   .typeBuildingIn {
     min-height: 120px;
@@ -336,7 +336,7 @@ footer {
     min-height: 180px;
   }
 }
-/* ---------------------------------------------------------- Extra small < 576px -------------------------------------------------------------- */
+/* -- Extra small < 576px -------------------------------------------------------------- */
 @media ( max-width: 576px ) {
   .menu_3 a img {
     display: none;
