--- a/styles.less
+++ b/styles.less
@@ -1,11 +1,12 @@
 @commonWidth: 100%;
 @headerFooterHeight: 160px;
-@colorDarkBlue: #87cefa;
+@colorDarkBlue: #cfe9fa;
 @colorTextInWhite: #1F3347;
 @colorGray: #E6E6E6;
 @colorBlack: black;
 @colorWhite: white;
 @colorHoverWhite: antiquewhite;
+@colorButton: #ff002f;
 
 * {
   margin: 0;
@@ -13,27 +14,27 @@
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
-html , body {
-  height : 100%;
+html, body {
+  height: 100%;
   background-color: @colorGray;
 }
 
 a {
-  text-decoration:none;
-}
-
-/* -- header -------------------------------------------------------------------*/
-
-header, footer {
-  width: @commonWidth;
-  min-height: @headerFooterHeight;
-  background-color: @colorDarkBlue;
+  text-decoration: none;
 }
 
 .clearfix::after {
   content: "";
   display: table;
   clear: both;
+}
+
+/* -- header / footer -------------------------------------------------------------------*/
+
+header, footer {
+  width: @commonWidth;
+  min-height: @headerFooterHeight;
+  background-color: @colorDarkBlue;
 }
 
 .header {
@@ -68,7 +69,39 @@ header, footer {
     color: white;
   }
 }
-/* -- main -------------------------------------------------------------------*/
+
+.gasForm {
+  margin: 20px;
+}
+
+.btnfos {
+  width: 150px;
+  height: 50px;
+  background-color: #ff002f;
+  color: yellow;
+  padding: 10px;
+
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgb(255, 0, 69);
+  outline-offset: 0px;
+  text-shadow: none;
+  -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  outline-color: rgba(255, 0, 69, 0.5);
+  outline-offset: 0px;
+}
+
+.btnfos:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  outline-offset: 15px;
+  outline-color: rgba(255, 255, 255, 0);
+  text-shadow: 1px 1px 2px #427388;
+}
+
+/* -- main -------------------------------------------------------------------------------- */
 .main {
   min-height: 500px;
 
@@ -89,9 +122,9 @@ header, footer {
       color: @colorTextInWhite;
     }
 
-     .typeBuildingOut:hover {
-       background-color: @colorHoverWhite;
-     }
+    .typeBuildingOut:hover {
+      background-color: @colorHoverWhite;
+    }
   }
 
   .typeWorkOut {
@@ -136,7 +169,7 @@ header, footer {
 
 footer {
   font-size: 16px;
-  color: @colorWhite;
+  color: @colorBlack;
   text-align: right;
 
   p {
@@ -240,6 +273,7 @@ footer {
       a > div:first-child {
         height: 100px;
       }
+
       a > div:last-child {
         height: 60px;
       }
@@ -306,7 +340,9 @@ footer {
     }
   }
 
-  .dropdown-divider {display: none}
+  .dropdown-divider {
+    display: none
+  }
 }
 
 /* -- Large < 992px -------------------------------------------------------------- */
@@ -336,6 +372,7 @@ footer {
     min-height: 180px;
   }
 }
+
 /* -- Extra small < 576px -------------------------------------------------------------- */
 @media ( max-width: 576px ) {
   .menu_3 a img {
@@ -344,5 +381,17 @@ footer {
 
   .squareImg2 {
     display: none;
+  }
+
+  .gasForm {
+    width: 100%;
+  }
+
+  .btnfos {
+    width: 100%;
+  }
+
+  .contacts {
+    width: 100%;
   }
 }
