--- a/styles/styles.less
+++ b/styles/styles.less
@@ -280,43 +280,43 @@ footer {
     }
 
     li:nth-child(1) a div:first-child {
-      background: url("images/CalcPrice1.svg") no-repeat 50%;
+      background: url("images/calcPrice1.svg") no-repeat 50%;
     }
 
     li:nth-child(1):hover a div:first-child {
-      background: url("images/CalcPrice2.svg") no-repeat 50%;
+      background: url("images/calcPrice2.svg") no-repeat 50%;
     }
 
     li:nth-child(2) a div:first-child {
-      background: url("images/Article1.svg") no-repeat 50%;
+      background: url("images/article1.svg") no-repeat 50%;
     }
 
     li:nth-child(2):hover a div:first-child {
-      background: url("images/Article2.svg") no-repeat 50%;
+      background: url("images/article2.svg") no-repeat 50%;
     }
 
     li:nth-child(3) a div:first-child {
-      background: url("images/Project1.svg") no-repeat 50%;
+      background: url("images/project1.svg") no-repeat 50%;
     }
 
     li:nth-child(3):hover a div:first-child {
-      background: url("images/Project2.svg") no-repeat 50%;
+      background: url("images/project2.svg") no-repeat 50%;
     }
 
     li:nth-child(4) a div:first-child {
-      background: url("images/OnlineCalc1.svg") no-repeat 50%;
+      background: url("images/onlineCalc1.svg") no-repeat 50%;
     }
 
     li:nth-child(4):hover a div:first-child {
-      background: url("images/OnlineCalc2.svg") no-repeat 50%;
+      background: url("images/onlineCalc2.svg") no-repeat 50%;
     }
 
     li:nth-child(5) a div:first-child {
-      background: url("images/Shop1.svg") no-repeat 50%;
+      background: url("images/shop1.svg") no-repeat 50%;
     }
 
     li:nth-child(5):hover a div:first-child {
-      background: url("images/Shop2.svg") no-repeat 50%;
+      background: url("images/shop2.svg") no-repeat 50%;
     }
   }
 
