--- a/styles/styles.less
+++ b/styles/styles.less
@@ -46,7 +46,7 @@ header, footer {
   font-size: 26pt;
 }
 
-.menu_1 {
+.menu {
   list-style-type: none;
 
   a {
@@ -59,6 +59,11 @@ header, footer {
 }
 
 .contacts {
+
+  li:first-child {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
 
   a {
     list-style-type: none;
@@ -85,12 +90,11 @@ header, footer {
   box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
   outline: 1px solid;
   outline-color: rgb(255, 0, 69);
-  outline-offset: 0px;
+  outline-offset: 0;
   text-shadow: none;
   -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
   outline-color: rgba(255, 0, 69, 0.5);
-  outline-offset: 0px;
 }
 
 .btnfos:hover {
@@ -102,6 +106,43 @@ header, footer {
 }
 
 /* -- main -------------------------------------------------------------------------------- */
+
+.feedback_form {
+  fieldset {
+    border: 2px solid black;
+  }
+
+  input {
+    text-transform: capitalize;
+  }
+
+  input[type="email"] {
+    background-color: blue;
+    color: yellow;
+  }
+}
+
+table {
+  tr td:first-child {
+    font-weight: bold;
+  }
+
+  tr td:last-child {
+    font-style: italic;
+  }
+
+  td {
+    border: 1px solid black;
+    padding-left: 5px;
+  }
+
+  margin-bottom: 10px;
+}
+
+.product {
+  height: 300px;
+}
+
 .main {
   min-height: 500px;
 
@@ -117,7 +158,6 @@ header, footer {
       background-color: white;
 
       list-style-type: none;
-      background-color: white;
       font-size: 14pt;
       color: @colorTextInWhite;
     }
@@ -251,7 +291,7 @@ footer {
 
 /* -- Large > 992px -------------------------------------------------------------- */
 @media ( min-width: 992px ) {
-  .menu_1 {
+  .menu {
     float: left;
     display: inline-block;
     height: 100%;
@@ -271,52 +311,52 @@ footer {
 
     li {
       a > div:first-child {
-        height: 100px;
+        height: 80px;
       }
 
       a > div:last-child {
-        height: 60px;
+        height: 40px;
       }
     }
 
     li:nth-child(1) a div:first-child {
-      background: url("images/calcPrice1.svg") no-repeat 50%;
+      background: url("../images/calcPrice1.svg") no-repeat 50%;
     }
 
     li:nth-child(1):hover a div:first-child {
-      background: url("images/calcPrice2.svg") no-repeat 50%;
+      background: url("../images/calcPrice2.svg") no-repeat 50%;
     }
 
     li:nth-child(2) a div:first-child {
-      background: url("images/article1.svg") no-repeat 50%;
+      background: url("../images/article1.svg") no-repeat 50%;
     }
 
     li:nth-child(2):hover a div:first-child {
-      background: url("images/article2.svg") no-repeat 50%;
+      background: url("../images/article2.svg") no-repeat 50%;
     }
 
     li:nth-child(3) a div:first-child {
-      background: url("images/project1.svg") no-repeat 50%;
+      background: url("../images/project1.svg") no-repeat 50%;
     }
 
     li:nth-child(3):hover a div:first-child {
-      background: url("images/project2.svg") no-repeat 50%;
+      background: url("../images/project2.svg") no-repeat 50%;
     }
 
     li:nth-child(4) a div:first-child {
-      background: url("images/onlineCalc1.svg") no-repeat 50%;
+      background: url("../images/onlineCalc1.svg") no-repeat 50%;
     }
 
     li:nth-child(4):hover a div:first-child {
-      background: url("images/onlineCalc2.svg") no-repeat 50%;
+      background: url("../images/onlineCalc2.svg") no-repeat 50%;
     }
 
     li:nth-child(5) a div:first-child {
-      background: url("images/shop1.svg") no-repeat 50%;
+      background: url("../images/shop1.svg") no-repeat 50%;
     }
 
     li:nth-child(5):hover a div:first-child {
-      background: url("images/shop2.svg") no-repeat 50%;
+      background: url("../images/shop2.svg") no-repeat 50%;
     }
   }
 
@@ -393,5 +433,6 @@ footer {
 
   .contacts {
     width: 100%;
+    text-align: center;
   }
 }
